# ElasticReconstruction

./: CMakeLists.txt  README.txt
BuildCorrespondence/: BuildCorrespondence.cpp  CMakeLists.txt  CorresApp.cpp  CorresApp.h
FragmentOptimizer/: CMakeLists.txt  FragmentOptimizer.cpp  HashSparseMatrix.cpp  HashSparseMatrix.h  OptApp.cpp  OptApp.h  PointCloud.cpp  PointCloud.h  RGBDTrajectory.h
GlobalRegistration/: CMakeLists.txt  GlobalRegistration.cpp  RansacCurvature.h
GraphOptimizer/: CMakeLists.txt  OptApp.cpp
GraphOptimizer/vertigo/: edge_se3Switchable.cpp
Integrate/: CMakeLists.txt
Integrate/src/: ControlGrid.cpp  Integrate.cpp  IntegrateApp.cpp  IntegrateApp.h  TSDFVolume.cpp  TSDFVolumeUnit.cpp  TSDFVolumeUnit.h  convert.cpp  data_loader.cpp  screenshot_manager.cpp  screenshot_manager.h
Matlab_Toolbox/Example/: demo_mrRegistrationEvaluation.m
