LIST( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
FIND_PACKAGE( SuiteSparse )

MESSAGE("CHOLMOD_FOUND: " CHOLMOD_FOUND)

INCLUDE_DIRECTORIES( ${CSPARSE_INCLUDE_DIR} )

add_executable(FragmentOptimizer FragmentOptimizer.cpp HashSparseMatrix.cpp OptApp.cpp PointCloud.cpp )
target_link_libraries(FragmentOptimizer  ${CHOLMOD_LIBRARIES} ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${PCL_SURFACE_LIBRARIES} ${PCL_SEGMENTATION_LIBRARIES} ${PCL_FEATURES_LIBRARIES}  ${PCL_SEARCH_LIBRARIES}  ${PCL_IO_LIBRARIES} ${PCL_KDTREE_LIBRARIES} ${PCL_GPU_FEATURES_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES})
